# Tripod-HR-APP

./: README.md  fix_ess.py  pyproject.toml
tripod_hr/: hooks.py  modules.txt  patches.txt
tripod_hr/overrides/: salary_slip.py
tripod_hr/patches/: import_ess_workspace.py  import_ess_workspace_v2.py  install_ess_guidelines_page.py  restore_ess_workspace.py
tripod_hr/tripod_hr/: __init__.py
tripod_hr/tripod_hr/doctype/appointment_guideline/: appointment_guideline.js  appointment_guideline.json  appointment_guideline.py
tripod_hr/tripod_hr/doctype/appraisal_cycle/: appraisal_cycle.json  appraisal_cycle.py
tripod_hr/tripod_hr/doctype/company_policy/: company_policy.js  company_policy.json  company_policy.py
tripod_hr/tripod_hr/doctype/performance_appraisal_form/: performance_appraisal_form.js  performance_appraisal_form.json  performance_appraisal_form.py
tripod_hr/tripod_hr/doctype/performance_appraisal_objective/: performance_appraisal_objective.json  performance_appraisal_objective.py
tripod_hr/tripod_hr/doctype/uae_eos_calculation/: uae_eos_calculation.js  uae_eos_calculation.json  uae_eos_calculation.py
tripod_hr/tripod_hr/notification/: appraisal_employee_review.json  appraisal_hr_rejected.json  appraisal_manager_review.json
tripod_hr/tripod_hr/page/appraisal_dashboard/: appraisal_dashboard.html  appraisal_dashboard.js  appraisal_dashboard.json  appraisal_dashboard.py
tripod_hr/tripod_hr/page/ess_guidelines/: ess_guidelines.html  ess_guidelines.js  ess_guidelines.json  (+1 more)
tripod_hr/tripod_hr/workflow/: performance_appraisal_workflow.json
(+2 files in other folders)
