[project]
name = "tripod_hr"
version = "0.0.1"
description = "Custom HR Management App for Tripod"
authors = [
    {name = "Tripod", email = "hr@tripod.com"}
]
dependencies = [
    "frappe~=14.0",
    "erpnext~=14.0"
]
requires-python = ">=3.10"
readme = "README.md"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.dev-dependencies]
# Add development dependencies here
